# audio-and-video-streaming-development

./: .gitignore  CMakeLists.txt  README.md  main.c
audio-and-video-encoding/audio-and-video-filters/audio_mix/: AudioMixer.cpp  AudioMixer.h  CMakeLists.txt  main.cpp
audio-and-video-encoding/audio-and-video-filters/filter_demo1/: main.cpp
audio-and-video-encoding/audio-encode/: CMakeLists.txt  main.cpp
audio-and-video-encoding/encode_mp4/: CMakeLists.txt  main.cpp
audio-and-video-encoding/encode_video/: CMakeLists.txt  main.cpp
audio-and-video-encoding/muxing_flv/: CMakeLists.txt  main.cpp
audio-and-video-encoding/save_jpeg/: CMakeLists.txt  main.cpp
audio-and-video-filters/audio_mix/: AudioMixer.cpp  AudioMixer.h  CMakeLists.txt  main.cpp
audio-and-video-filters/filter_demo1/: CMakeLists.txt
audio-and-video-filters/video_watermark/: CMakeLists.txt  main.cpp
display/mp4-player-demo1/: CMakeLists.txt  SDLPlayer.cpp  SDLPlayer.h  VideoDecode.cpp  VideoDecode.h  main.cpp
display/mp4-player-demo2/: AudioDecoder.cpp  AudioDecoder.h  CMakeLists.txt  SDLPlayer.cpp  SDLPlayer.h  main.cpp
ffplay_debug/: CMakeLists.txt  cmdutils.c  config.h  config_components.h  ffplay.c
practical-guide-to-ffmpeg-demuxing-and-ecoding/audio_resample/: CMakeLists.txt  main.c  main.cpp
practical-guide-to-ffmpeg-demuxing-and-ecoding/avio_sdl_play/: CMakeLists.txt  main.cpp
practical-guide-to-ffmpeg-demuxing-and-ecoding/decode_audio/: CMakeLists.txt  decode_audio.cpp  main.c
practical-guide-to-ffmpeg-demuxing-and-ecoding/decode_video/: CMakeLists.txt  decode_video.cpp
practical-guide-to-ffmpeg-demuxing-and-ecoding/demux_mp4/: CMakeLists.txt  demux_mp4.cpp  main.c
practical-guide-to-ffmpeg-demuxing-and-ecoding/extract-aac/: CMakeLists.txt  extract_aac.cpp  main.c
practical-guide-to-ffmpeg-demuxing-and-ecoding/extract-h264/: CMakeLists.txt  extract_h264.cpp  main.c
practical-guide-to-ffmpeg-demuxing-and-ecoding/ffmpeg-demux/: main.c
practical-guide-to-ffmpeg-demuxing-and-ecoding/flv_demux/: CMakeLists.txt  main.cpp
rtmp/: CMakeLists.txt  aacencoder.cpp  aacencoder.h  aacrtmppackager.cpp  aacrtmppackager.h  audiocapturer.cpp  audiocapturer.h  audioresample.cpp  audioresample.h  avpublishtime.cpp  avpublishtime.h  avtimebase.cpp  avtimebase.h  codecs.h  commonlooper.cpp  commonlooper.h  dlog.cpp  dlog.h  h264encoder.cpp  h264encoder.h  imagescale.h  looper.cpp  looper.h  main_publish.cpp  mediabase.cpp  mediabase.h  naluloop.cpp  naluloop.h  pushwork.cpp  pushwork.h  rtmp_publish.cpp  rtmpbase.cpp  rtmpbase.h  rtmppackager.h  rtmppusher.cpp  rtmppusher.h  rtsppusher.cpp  rtsppusher.h  semaphore.h  timeutil.h  (+5 more)
rtmp/test/: readfile.c  testSDL.cpp
rtsp-publish/: AudioCapture.cpp  AudioCapture.h  AudioEncoder.cpp  AudioEncoder.h  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  RtmpPublisher.cpp  RtmpPublisher.h  SDLViewer.cpp  SDLViewer.h  ThreadSafeQueue.h  VideoCapture.cpp  VideoCapture.h  VideoEncoder.cpp  VideoEncoder.h  config.properties  main.cpp
rtsp-publish/librtmp/: rtmp.c
sdl/: demo1.c  demo2.c  demo3.c  demo4.c  demo5.c  demo6.c
